# wallet-self-audit

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: airgap-setup.md  threat-model.md
docs/plans/: 2026-04-29-design.md
scripts/: check-hex-leaks.sh  generate_sentinel.py
src/wallet_self_audit/: __init__.py  cli.py  hardening.py  ownership.py  runner.py  verdict.py
src/wallet_self_audit/crypto/: __init__.py  der.py  recovery_detector.py  secret.py  sighash.py
src/wallet_self_audit/lattice/: __init__.py  hnp_construct.py  lll_pure.py
src/wallet_self_audit/logging/: __init__.py  redaction.py
src/wallet_self_audit/nonce/: __init__.py  collision.py  extractor.py  lattice.py
src/wallet_self_audit/prng/: __init__.py  bip39.py  brainwallet.py  derive.py  milk_sad.py  mt19937_cpp.py  owner_input.py  randstorm.py
src/wallet_self_audit/vectors/: __init__.py  base.py  nonce_audit.py  plugins.py  prng_audit.py  registry.py
tests/: conftest.py
tests/fixtures/: der_signatures.json  sentinel.txt
tests/fixtures/bip322/: corpus.json
tests/fixtures/prng/: mt19937_cpp_ref.json
tests/integration/: test_ownership.py
tests/property/: test_verdict_invariant.py
tests/security/: no_leak_e2e.py
tests/unit/: test_cli.py  test_cli_prng_audit.py  test_der.py  test_hardening.py  test_hnp_construct.py  test_lll_pure.py  test_nonce_audit_orchestrator.py  test_nonce_collision.py  test_nonce_extractor_parser.py  test_nonce_lattice.py  test_plugin_runner.py  test_prng_audit_orchestrator.py  test_prng_bip39.py  test_prng_brainwallet.py  test_prng_derive.py  test_prng_milk_sad.py  test_prng_mt19937.py  test_prng_randstorm.py  test_recovery_detector.py  test_redaction.py  test_secret.py  test_sighash.py  test_verdict.py
tools/: ref.cpp
