[project]
name = "wallet-self-audit"
version = "1.0.0"
description = "Local Bitcoin wallet self-audit CLI for Mac M-series. Defensive — never outputs private keys."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [
    { name = "Daniyar Salakhutdinov" },
]
keywords = ["bitcoin", "wallet", "audit", "security", "ecdsa", "prng", "milk-sad", "randstorm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "coincurve>=21",
    "numpy>=2.1",
    "mnemonic>=0.21",
    "structlog>=24.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "bip322==0.2.0",
]
# btclib (sighash) is added in Phase 3. The C-extension btclib-libsecp256k1
# lacks ARM64 wheels in 2026 and would force a source build in CI.

[project.scripts]
wsa = "wallet_self_audit.cli:main"

[project.optional-dependencies]
lattice = ["fpylll>=0.6.4"]
claude = ["claude-agent-sdk>=0.1.71"]

[project.urls]
Homepage = "https://github.com/Velheorius1/wallet-self-audit"
Documentation = "https://github.com/Velheorius1/wallet-self-audit/tree/main/docs"
Repository = "https://github.com/Velheorius1/wallet-self-audit"
Issues = "https://github.com/Velheorius1/wallet-self-audit/issues"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallet_self_audit"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "pytest-benchmark>=5.0",
    "hypothesis>=6.115",
    "mypy>=1.13",
    "pyright>=1.1.385",
    "ruff>=0.7",
    "bandit[toml]>=1.7",
    "pip-audit>=2.7",
    "sigstore>=3.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "pre-commit>=4.0",
]

# ---------- Linting / Formatting ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "C4",    # comprehensions
    "SIM",   # simplify
    "RUF",   # ruff-specific
    "PL",    # pylint
    "TRY",   # tryceratops
    "ASYNC", # async-misuse
    "PERF",  # perflint
    "G",     # logging-format (G004 catches f-strings in logger calls)
]
ignore = [
    "S101",    # assert_used — pytest needs it
    "PLR0913", # too many args — verdict has many fields by design
    "TRY003",  # long exc messages — defensive code wants context
    "TRY300",  # use else block — adds noise in defensive try/except
    "TRY301",  # raise within try — sometimes intentional
    "PLR0911", # too many returns — verdict.__post_init__ has many checks
    "PLR0912", # too many branches — defensive code is branchy
    "PLR0915", # too many statements — same
    "PLW2901", # for-loop variable overwritten — sometimes intentional
    "N818",    # exception name doesn't end with Error — domain-specific names allowed
    "PLC0415", # import inside function — allowed for lazy imports in CLI
    "PERF401", # use list.extend over append — readability tradeoff
    "SIM102",  # nested if — clearer than combined sometimes
    "PLR2004", # magic values — protocol byte tags (0x30, 0x02) are spec-defined
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",     # asserts ok in tests
    "PLR2004",  # magic values ok in tests
    "S105",     # hardcoded string assignment
    "S106",     # hardcoded password kwarg
    "S301",     # pickle tests need pickle
    "PLC0415",  # imports inside test funcs
    "F841",     # unused vars in test scaffolding
    "E501",     # long lines in fixtures
    "PLR0911",
    "PLR0912",
    "N802",     # math notation Q (ECDSA pubkey) is canonical in tests
    "N806",     # ditto for Q-named locals
]
"scripts/**" = ["S603", "S607", "PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["wallet_self_audit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Type Checking ----------
[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_explicit = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["bip322.*", "coincurve.*", "btclib.*", "mnemonic.*", "fpylll.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.*"]
strict = ["src/wallet_self_audit"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

# ---------- Testing ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-n", "auto",
    "--cov=wallet_self_audit",
    "--cov-report=term-missing",
    # Coverage threshold ratchets up by phase. xdist + multiprocessing.Pool
    # child processes drop coverage by ~15-20 pp on CI vs a single-process
    # local run; ``[tool.coverage.run] concurrency = ["multiprocessing"]``
    # helps but does not fully close the gap on macos-14 runners. Phase 7+
    # will address this either by switching off xdist for the coverage
    # gate or by collecting child coverage explicitly via
    # ``COVERAGE_PROCESS_START`` + a sitecustomize hook.
    #   Phase 1 (Foundation)         — 70%
    #   Phase 2 (PRNG audit)         — 70%
    #   Phase 3 (Nonce audit)        — 65%
    #   Phase 4 (Lattice/HNP)        — 65%
    #   Phase 5 (Plugins, current)   — 60% (more new code in plugin
    #                                       scaffolding than tests can
    #                                       exercise via xdist on CI)
    #   Phase 8 (Release prep)       — 85%
    "--cov-fail-under=60",
]
markers = [
    "lattice: lattice attack tests (slow, optional fpylll dep)",
    "benchmark: performance regression tests",
    "integration: integration tests (network or slow)",
    "security: security/leak invariant tests",
]

[tool.coverage.run]
source = ["src/wallet_self_audit"]
branch = true
# pytest-xdist + multiprocessing.Pool: tell coverage.py to track child
# processes and merge per-worker .coverage.* files at the end. Without
# this, coverage drops by ~15 percentage points on Linux CI relative to
# a single-process run.
concurrency = ["multiprocessing", "thread"]
parallel = true
sigterm = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ---------- Security ----------
[tool.bandit]
exclude_dirs = ["tests", ".venv", "build"]
skips = ["B101"]  # assert_used (pytest)

# NOTE: NO `[tool.uv] require-hashes = true` — invalid project-mode key.
# `uv.lock` already embeds SHA-256 hashes; `uv sync --locked` verifies them.
